# VRCalibrator

./: CMakeLists.txt  README.md  main.cpp  samples.hpp
avango-example/: calibration.txt  daemon.py  log  main.py  skeleton.py  start.sh
